--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-export-table-to-excel": "^1.0.6",
     "react-redux": "^8.0.2",
